Refactor tests by simplifying method parameters and enhancing readability